# redwood

./: .gitignore  Cargo.toml  README.md
examples/: die.rs  grid_strategy.rs
src/: lib.rs  messages.rs  strategy.rs
src/exchanges/: mod.rs
src/exchanges/binance/: binance_client.rs  binance_ws_client.rs  binance_ws_connector.rs  mod.rs  strat.rs
src/exchanges/ftx/: ftx_client.rs  ftx_rest_connector.rs  ftx_value_objects.rs  ftx_ws_client.rs  ftx_ws_connector.rs  mod.rs  strat.rs
