[package]
name = "quantm-trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
futures = "0.3.21"
hex = "0.4.3"
hmac = "0.12.1"
native-tls = "0.2.10"
parking_lot = "0.12.1"
reqwest = "0.11.11"
serde_json = "1.0.83"
sha2 = "0.10.2"
tokio = "1.20.1"
tokio-tungstenite = {version="0.17.2", features=["native-tls"]}
url = "2.2.2"
